# Book-Recomendation

./: .gitignore  .huggingface.yml  Dockerfile  LICENSE  Makefile  README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  rough.py  setup.py  upload_to_dagshub.py
.github/workflows/: streamlit_ci.yml
BOOK-RECOMENDATION/: .gitignore  requirements.txt
BOOK-RECOMENDATION/notebooks/: Book_Rec.ipynb  exp.ipynb
app_src/: helper.py
app_src/data/: build_features.py  cleaning.py  ingestion.py
app_src/entity/: config_entity.py
app_src/models/model1/: model.py  predict.py
app_src/models/model2/: model.py  predict.py  train.py
app_src/utils/: data_manager.py
configs/: book_topics.yaml  paper_topics.yaml
data/interim/: modified_papers.csv
data/processed/: predictions.json
data/processed/matrices/: sentence_transformer_paper_matrix.npy
data/processed/models/: book_tfidf_vectorizer.pkl  paper_tfidf_vectorizer.pkl
notebooks/: Book_Rec.ipynb
src/: helper.py
src/constants/: __init__.py
src/data/: build_features.py  cleaning.py  ingestion.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/models/model1/: dataloader.py  model.py  predict.py
src/models/model2/: __init__ .py  model.py  predict.py
static/css/: style.css
templates/: index.html
