# pyproject.toml

[build-system]
# Declares setuptools as the build backend
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[project]
# --- Core Metadata ---
name = "book-recommender"  # This is the name you use for 'pip install'
version = "0.1.0"
description = "A modular book recommendation system for academic/exploratory use."
readme = "README.md"
requires-python = ">=3.9"  # Specify your minimum required Python version
license = {text = "MIT"}   # Or {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["recommendation-system", "machine-learning", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# --- Dependencies ---
# Dependencies required for the package to RUN
# I recommend keeping these here for clean distribution.
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.2",
    "PyYAML>=6.0",        # For reading your configs/model1.yaml
    "tqdm",               # If you use progress bars
]


# --- Setuptools Configuration for 'src' Layout (CRUCIAL) ---
[tool.setuptools]
# Map the root source code to the 'src' folder
package-dir = {"" = "src"} 

[tool.setuptools.packages.find]
where = ["src"] 

