[project]
name = "app_src"
version = "0.0.1"
description = "A Project on Book and Research paper Recommendation."
authors = [
    { name = "Chandan", email = "chandankumarswain3467@gmail.com" }
]
readme = "README.md"

[tool.setuptools]
packages={find={}}

[tool.setuptools.dynamic]
dependencies={file='requirements.txt'}
